my_app_no_db_port80.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-test
  template:
    metadata:
      labels:
        app: notes-test
    spec:
      containers:
      - name: notes-container
        image: azawslearn/devopsrepo:notesapp_no_db
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  selector:
    app: notes-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
